[Add] newMessage request
